--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/main.js": "/js/main.js?id=a5c734d08cfb63393e94862442ba70b3",
+    "/js/main.js": "/js/main.js?id=52b46220c0ac382fc450ecd7712fc9f4",
     "/js/chunks/index2.ef3b91661acab64d.js": "/js/chunks/index2.ef3b91661acab64d.js?id=77a2a38d1d66e6e4549a1409663e2872",
     "/js/chunks/components-tabs.7beeed2c289124de.js": "/js/chunks/components-tabs.7beeed2c289124de.js?id=3874f855586701919520aa8b679d9bba",
     "/js/chunks/components-accordions.f44b901551bf002b.js": "/js/chunks/components-accordions.f44b901551bf002b.js?id=94a5e7e41811fddd141e87936a26afae",
@@ -152,5 +152,11 @@
     "/js/chunks/components-tabs.28c85e05f8b1f1a0.js": "/js/chunks/components-tabs.28c85e05f8b1f1a0.js?id=96c78fa6f25b5dc286cf476c1ef0b5b2",
     "/js/chunks/components-tabs.01c515a39fac8ae7.js": "/js/chunks/components-tabs.01c515a39fac8ae7.js?id=e9aa69bd4d599d6bc4b6ad124ccef6b0",
     "/js/chunks/components-tabs.f6e17db8065b751d.js": "/js/chunks/components-tabs.f6e17db8065b751d.js?id=7a808ddb7ed888e2c7bac0a2bb562375",
-    "/js/chunks/components-tabs.bb605365494aef98.js": "/js/chunks/components-tabs.bb605365494aef98.js?id=fabab50ec159169db5ac03c1876dd782"
+    "/js/chunks/components-tabs.bb605365494aef98.js": "/js/chunks/components-tabs.bb605365494aef98.js?id=fabab50ec159169db5ac03c1876dd782",
+    "/js/chunks/auth-login-boxed.1d17ed0c0c752fe3.js": "/js/chunks/auth-login-boxed.1d17ed0c0c752fe3.js?id=4fe514ffdf227f8d56c81ba2e32c2be2",
+    "/js/chunks/components-tabs.69e9af955595e75b.js": "/js/chunks/components-tabs.69e9af955595e75b.js?id=56c283c184419dee15102562377d4ec9",
+    "/js/chunks/components-tabs.650f38e1bfe6055b.js": "/js/chunks/components-tabs.650f38e1bfe6055b.js?id=86b7d62256b9af19969a444266635295",
+    "/js/chunks/components-tabs.6519ad60b20bf539.js": "/js/chunks/components-tabs.6519ad60b20bf539.js?id=6f7d66cf3e556376d97624dbfe1b25c0",
+    "/js/chunks/components-tabs.f7f05c8f29cec9ab.js": "/js/chunks/components-tabs.f7f05c8f29cec9ab.js?id=af2c6650bee4f00b9e24c2ca4fdc95d1",
+    "/js/chunks/components-tabs.b31098e894bc5b5a.js": "/js/chunks/components-tabs.b31098e894bc5b5a.js?id=ed465562f53ffbd2133776ac830ddc45"
 }
